--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -156,7 +156,8 @@ for (tissue in abundant.tissues) {
                                         title = tissue)
         
         ggsave(plot = int.heatmap,
-               filename = file.path(fig.dir, "by_tissues", "lm_log", 
+               filename = file.path(fig.dir, "pathway_to_signature",
+                                    "by_tissues", "lm_log", 
                                     paste0(tissue, "_sig_tilde_pathway.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
@@ -191,14 +192,15 @@ for (tissue in abundant.tissues) {
 }
 ```
 
-### Summarizing the regression of signatures ~ pathways
+#### Summarizing the regression of signatures ~ pathways
 
 ```{r}
 pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2)
 print(pp.logged)
 
 ggsave(plot = pp.logged,
-               filename = file.path(fig.dir, "by_tissues", "lm_log", 
+               filename = file.path(fig.dir, "pathway_to_signature", 
+                                    "by_tissues", "lm_log", 
                                     "logged_summarized.png"),
                height = 3, width = 4, bg = "white")
 ```
@@ -206,11 +208,44 @@ ggsave(plot = pp.logged,
 
 ```{r}
 pp.counts = plot_all_counts(tissue.lm.coefs.mats, threshold = 0.2)
-print(pp.counts)
+# print(pp.counts)
 
 ggsave(plot = pp.counts,
-               filename = file.path(fig.dir, "by_tissues", "lm_counts", 
+               filename = file.path(fig.dir, "pathway_to_signature", 
+                                    "by_tissues", "lm_counts", 
                                     "counts_summarized.png"),
                height = 3, width = 4, bg = "white")
+```
+
+
+### Logistic regression predicting pathways from signatures across tissues
+
+```{r}
+tissue.log.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways,
+                                 pathways.input = mutated.pathways.tissues,
+                                 interaction_function = get_sig_path_lms, 
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.1,
+                                 p.adjust = TRUE,
+                                 method = "BH",
+                                 sig.log = TRUE,
+                                 robust = TRUE,
+                                 path.to.sig = TRUE)
+ 
+   
+for (tissue in abundant.tissues) {
+    if (any(abs(tissue.log.coefs.mats.log[[tissue]]) > 0) ) {
+        cat(tissue, "\n")
+        int.heatmap = ggheatmap_wrapper(tissue.log.coefs.mats.log[[tissue]], 
+                                        title = tissue)
+        
+        ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "signature_to_pathway", 
+                                    "by_tissues", "lm_log", 
+                                    paste0(tissue, "_path_tilde_sig.dotplot.png")),
+               height = 5, width = 6, bg = "white")
+    }
+}
+
 ```
 
