--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -142,6 +142,7 @@ In this first case, I tried logging.
 tissue.lm.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways,
                                  pathways.input = mutated.pathways.tissues,
                                  interaction_function = get_sig_path_lms, 
+                                 robust = FALSE,
                                  path.min.tissues = 30,
                                  p.val.threshold = 0.1,
                                  p.adjust = TRUE,
@@ -150,9 +151,8 @@ tissue.lm.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.
                                  path.to.sig = TRUE)
  
 for (tissue in abundant.tissues) {
-   
+    cat(tissue, "\n")   
     if (any(abs(tissue.lm.coefs.mats.log[[tissue]]) > 0) ) {
-        cat(tissue, "\n")
         int.heatmap = ggheatmap_wrapper(tissue.lm.coefs.mats.log[[tissue]], 
                                         title = tissue)
         
