--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -196,20 +196,20 @@ for (tissue in abundant.tissues) {
 
 #### Summarizing the regression of signatures ~ pathways
 
-```{r, warning= FALSE}
-pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2)
+```{r, fig.width=6, fig.height=4, warning= FALSE}
+pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 10)
 print(pp.logged)
 
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature", 
                                     "by_tissues", "lm_log", 
                                     "logged_summarized_OLS.png"),
-               height = 3, width = 4, bg = "white")
+               height = 6, width = 8, bg = "white")
 
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature", 
                                     "by_tissues", "lm_log", "logged_summarized_OLS.pdf"),
-               height = 3, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+               height = 6, width = 8, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 
 ```
 
