--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -197,14 +197,14 @@ for (tissue in abundant.tissues) {
 #### Summarizing the regression of signatures ~ pathways
 
 ```{r, fig.width=6, fig.height=4, warning= FALSE}
-pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 10)
+pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 5)
 print(pp.logged)
 
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature", 
                                     "by_tissues", "lm_log", 
                                     "logged_summarized_OLS.png"),
-               height = 6, width = 8, bg = "white")
+               height = 2.3, width = 2.9, bg = "white")
 
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature", 
@@ -213,6 +213,25 @@ ggsave(plot = pp.logged,
 
 ```
 
+
+```{r, fig.width=6, fig.height=4, warning= FALSE}
+pp.logged.excl.melanoma = plot_all_counts(
+    tissue.lm.coefs.mats.log[setdiff(names(tissue.lm.coefs.mats.log), "Skin_Melanoma")],
+    threshold = 0.2, psize = 5)
+print(pp.logged.excl.melanoma)
+
+ggsave(plot = pp.logged.excl.melanoma,
+               filename = file.path(fig.dir, "pathway_to_signature", 
+                                    "by_tissues", "lm_log", 
+                                    "logged_summarized_OLS_excl_melanoma.png"),
+               height = 2, width = 2.4, bg = "white")
+
+ggsave(plot = pp.logged.excl.melanoma,
+               filename = file.path(fig.dir, "pathway_to_signature", 
+                                    "by_tissues", "lm_log", "logged_summarized_OLS_excl_melanoma.pdf"),
+               height = 6, width = 8, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+
+```
 We can look at some select interactions. E.g. tissues where the interaction
 between NOTCH and Aging is observed. 
 
@@ -226,6 +245,16 @@ NOTCH and SBS40
 ```{r}
 NOTCH.SBS40 = summarize_int_mat(tissue.lm.coefs.mats.log)["SBS40", "NOTCH"]
 cat(gsub(",", ", ", NOTCH.SBS40))
+```
+
+```{r}
+WNT.SBS8 = summarize_int_mat(tissue.lm.coefs.mats.log)["SBS8", "WNT"]
+cat(gsub(",", ", ", WNT.SBS8))
+```
+
+```{r}
+TP53.Ageing = summarize_int_mat(tissue.lm.coefs.mats.log)["Ageing", "TP53"]
+cat(gsub(",", ", ", TP53.Ageing))
 ```
 
 ```{r}
@@ -343,14 +372,15 @@ for (tissue in abundant.tissues) {
 #### Summarizing the regression of pathways ~ signatures
 
 ```{r}
-pp.logged = plot_all_counts(tissue.log.coefs.mats.log, threshold = 0.1)
-print(pp.logged)
+pp.log.log = plot_all_counts(tissue.log.coefs.mats.log, threshold = 0.1, psize = 6,
+                             expand.mult = c(0.13, 0.13))
+print(pp.log.log)
 
-ggsave(plot = pp.logged,
+ggsave(plot = pp.log.log,
                filename = file.path(fig.dir, "signature_to_pathway", 
                                     "by_tissues", "log_log", 
                                     "logged_summarized.png"),
-               height = 1.1, width = 1.5, bg = "white")
+               height = 1.15, width = 1.6, bg = "white")
 ```
 
 ```{r}
