--- a/analysis/PCAWG_sig_sig_interactions.Rmd
+++ b/analysis/PCAWG_sig_sig_interactions.Rmd
@@ -62,6 +62,7 @@ pout = minor_plot(pp, expand.factor = 0.05, expand.factor.y = 0)
 print(pout)
 
 ggsave(filename = file.path(fig.dir, paste0(tissue, "_sig_sig_network.png") ),
+       plot = pout,
        width = 6, height = 4)
 
 # layouts = c("fr", "stress", "dh", "drl")
@@ -143,5 +144,13 @@ for (tissue in tissues) {
     })
 }
 
+sig.sig.ints.summary.plot = plot_all_counts(networks.concat, 
+                                            psize = 7, lsize = 2.4, 
+                                            expand.mult = c(0.02, 0.02)) + 
+    coord_cartesian(x = c(1, 23), clip = "off")
+
+ggsave(filename = file.path(fig.dir, paste0("sig_sig_ints_summary_plot.png") ),
+       plot = sig.sig.ints.summary.plot,
+       width = 6, height = 6)
 # concat.summaries = summarize_by_tissues(networks.concat)
 ```
